--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,10 @@
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
+.bold {
+    font-weight: bold;
+}
+
 .hide-button-style {
     border: none;
     background-color: transparent;
