--- a/src/app/pages/cart/cart.component.scss
+++ b/src/app/pages/cart/cart.component.scss
@@ -55,6 +55,9 @@ $light-grey: #dedede;
             .product-cart {
                 padding-bottom: 15px;
                 display: flex;
+                flex-wrap: wrap;
+                > * {margin-right: 30px;}
+                > *:last-child {margin-right: 0;}
                 justify-content: space-between;
                 align-items: baseline;
                 border-bottom: 1px solid $light-grey;
@@ -82,6 +85,11 @@ $light-grey: #dedede;
                 }
 
                 .quantity {
+
+                    ::after {
+                        flex-basis: 100%;
+                    }
+
                     display: flex;
                     align-items: center;
                     justify-content: space-between;
