--- a/src/app/tools/navbar/navbar.component.scss
+++ b/src/app/tools/navbar/navbar.component.scss
@@ -56,6 +56,7 @@ a {
 
     .nav-top-right {
         .btn-container {
+            cursor: pointer;
 
             button {background-color: transparent; border: none;}
 
