--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -10,7 +10,7 @@
             <div class="text-side">
                 <h2 class="title">Démarrer</h2>
                 <p class="text">Créez un compte pour bénéficier de tarifs préférentiels et vendre vos livres</p>
-                <p class="button-container"><button>Créer un compte</button></p>
+                <p class="button-container" routerLink="/register"><button>Créer un compte</button></p>
             </div>
 
             <div class="img-container">
