--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -17,7 +17,7 @@ $blue-sky: #22B5F0;
         form,
         input,
         label {
-            cursor: pointer;
+            cursor: default;
         }
 
         .img-container {
