--- a/src/app/pages/cart/cart.component.scss
+++ b/src/app/pages/cart/cart.component.scss
@@ -145,7 +145,7 @@ $light-grey: #dedede;
             background-color: aliceblue;
             font-size: 1.4em;
             display: flex;
-            justify-content: end;
+            justify-content: flex-end;
 
             .label {
                 font-weight:300;
