--- a/src/app/pages/register/register.component.scss
+++ b/src/app/pages/register/register.component.scss
@@ -14,7 +14,7 @@ $blue-sky: #22B5F0;
         background-color: white;
         padding: 50px 100px;
 
-        form, input, label {cursor: pointer;}
+        form, input, label {cursor:default;}
 
         .img-container {
             margin-bottom: 30px;
