--- a/src/app/pages/product-list/product-list.component.html
+++ b/src/app/pages/product-list/product-list.component.html
@@ -23,7 +23,7 @@
                                 <button (click)="filterLanguage(enumLanguage.ENGLISH)"
                                     [ngClass]="{'hide-button-style': true, 'bold' : languageFilter == enumLanguage.ENGLISH}"
                                     class="hide-button-style">Anglais</button>
-                                <span class="number_items">3509</span>
+                                <span class="number_items">{{getNumberProductsByLanguage('english')}}</span>
                             </p>
 
                             <p class="d-flex justify-content-between align-items-md-baseline">
@@ -31,7 +31,7 @@
                                     [ngClass]="{'hide-button-style': true, 'bold' : languageFilter == enumLanguage.SPANISH}"
                                     class="hide-button-style">Espagnol
                                 </button>
-                                <span class="number_items">379</span>
+                                <span class="number_items">{{getNumberProductsByLanguage('spanish')}}</span>
                             </p>
 
                             <p class="d-flex justify-content-between align-items-md-baseline">
@@ -39,7 +39,7 @@
                                     [ngClass]="{'hide-button-style': true, 'bold' : languageFilter == enumLanguage.FRENCH}"
                                     class="hide-button-style">Français
                                 </button>
-                                <span class="number_items">147</span>
+                                <span class="number_items">{{getNumberProductsByLanguage('french')}}</span>
                             </p>
                         </div>
                     </div>
@@ -53,13 +53,26 @@
                         </p>
 
                         <div class="option-list" *ngIf="numberPagesPanel">
-                            <p class="d-flex justify-content-between align-items-md-baseline"><button
-                                    class="hide-button-style">0 - 150</button><span class="number_items">3509</span></p>
-                            <p class="d-flex justify-content-between align-items-md-baseline"><button
-                                    class="hide-button-style">150 - 300</button><span class="number_items">379</span>
+                            <p class="d-flex justify-content-between align-items-md-baseline">
+                                <button (click)="filterPage(0,150,1)"
+                                    [ngClass]="{'hide-button-style': true, 'bold' : pageFilter == 1}">
+                                    0 - 150
+                                </button>
+                                <span class="number_items">{{getNumberProductsByPage(0,150)}}</span>
                             </p>
-                            <p class="d-flex justify-content-between align-items-md-baseline"><button
-                                    class="hide-button-style">300 - 500</button><span class="number_items">147</span>
+                            <p class="d-flex justify-content-between align-items-md-baseline">
+                                <button class="hide-button-style" (click)="filterPage(151,300,2)"
+                                    [ngClass]="{'hide-button-style': true, 'bold' : pageFilter == 2}">
+                                    150 - 300
+                                </button>
+                                <span class="number_items">{{getNumberProductsByPage(151,300)}}</span>
+                            </p>
+                            <p class="d-flex justify-content-between align-items-md-baseline">
+                                <button class="hide-button-style" (click)="filterPage(301,500,3)"
+                                    [ngClass]="{'hide-button-style': true, 'bold' : pageFilter == 3}">
+                                    300 - 500
+                                </button>
+                                <span class="number_items">{{getNumberProductsByPage(301,500)}}</span>
                             </p>
                         </div>
                     </div>
@@ -77,7 +90,8 @@
 
                     <p class="title" *ngIf="selectedCategory != null">Catégorie : {{ selectedCategory.title }}</p>
                     <p class="title" *ngIf="selectedCategory == null && keyWord == null">Tous nos produits</p>
-                    <p class="title" *ngIf="selectedCategory == null  && keyWord != null">Recherche par mot-clé: {{ keyWord }}</p>
+                    <p class="title" *ngIf="selectedCategory == null  && keyWord != null">Recherche par mot-clé: {{
+                        keyWord }}</p>
 
                     <div class="container-product"
                         *ngFor="let product of filteredProducts | paginate : { itemsPerPage: 10, currentPage: p}">
@@ -107,6 +121,7 @@
                                 <div class="publication-date">Publié le {{ op.getFormatDate(product.publication_date) }}
                                 </div>
                                 <div class="language">{{product.language}}</div>
+                                <div class="number-page">{{product.page}} pages</div>
                                 <div class="bottom-block d-flex justify-content-between align-items-end">
                                     <div class="price">EUR {{ product.price }}</div>
                                     <div class="actions cursor-pointer">
@@ -119,8 +134,8 @@
                         </div>
                     </div>
 
-                    <pagination-controls previousLabel="Précédent" nextLabel="Suivant" 
-                    (pageChange)="changePage($event)">
+                    <pagination-controls previousLabel="Précédent" nextLabel="Suivant"
+                        (pageChange)="changePage($event)">
                     </pagination-controls>
 
 
