--- a/src/app/pages/contact-delivery/contact-delivery.component.html
+++ b/src/app/pages/contact-delivery/contact-delivery.component.html
@@ -105,7 +105,8 @@
 
 
                 <div class="actions">
-                    <button class="continue-payment-btn" (click)="saveDeliveryContact()">Valider le paiement</button>
+                    <!-- <button (click)="checkout()">Payer</button> -->
+                    <button class="continue-payment-btn" (click)="saveDeliveryContactAndPay()">Valider le paiement</button>
                 </div>
 
             </div>
