--- a/src/app/pages/product-detail/product-detail.component.html
+++ b/src/app/pages/product-detail/product-detail.component.html
@@ -78,12 +78,9 @@
                     <p class="text"><span class="prop-text">Dimensions</span><span class="value-text">140 x 216
                             mm</span></p>
                 </div>
-
             </div>
-
         </div>
-
-
     </div>
-
 </div>
+
+<app-footer></app-footer>
