--- a/src/app/pages/product-list/product-list.component.scss
+++ b/src/app/pages/product-list/product-list.component.scss
@@ -152,6 +152,11 @@ $light-grey: #dedede;
                             font-size: 0.8em;
                             margin-bottom: 20px;
                         }
+
+                        .product-properties {
+                            color: $marine-color;
+                            font-size: 0.9em;
+                        }
         
                         .bottom-block {
                             margin-top: auto;
