--- a/src/app/tools/footer/footer.component.html
+++ b/src/app/tools/footer/footer.component.html
@@ -1,1 +1,93 @@
+<footer class="site-footer">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-3 col-md-6">
+                <!-- Contact Info-->
+                <section class="widget widget-light-skin">
+                    <h3 class="widget-title">Contact</h3>
+                    <p class="text-white">Téléphone : 03 04 88 43 87</p>
+                    <ul class="list-unstyled text-sm text-white">
+                        <li><span class="opacity-50">Lundi - Vendredi : </span>9.00 am - 8.00 pm</li>
+                        <li><span class="opacity-50">Samedi : </span>10.00 am - 6.00 pm</li>
+                    </ul>
+                    <p><a class="navi-link-light" href="#">support@bookstore.com</a></p><a
+                        class="social-button shape-circle sb-facebook sb-light-skin" href="#"><i
+                            class="socicon-facebook"></i></a><a
+                        class="social-button shape-circle sb-twitter sb-light-skin" href="#"><i
+                            class="socicon-twitter"></i></a><a
+                        class="social-button shape-circle sb-instagram sb-light-skin" href="#"><i
+                            class="socicon-instagram"></i></a><a
+                        class="social-button shape-circle sb-google-plus sb-light-skin" href="#"><i
+                            class="socicon-googleplus"></i></a>
+                </section>
+            </div>
 
+
+            <div class="col-lg-3 col-md-6">
+                <!-- About Us-->
+                <section class="widget widget-links widget-light-skin">
+                    <h3 class="widget-title">Besoin d'aide</h3>
+                    <ul>
+                        <li><a href="#">Conseils et astuces</a></li>
+                        <li><a href="#">Nous contacter</a></li>
+                        <li><a href="#">Suivi de commande</a></li>
+                        <li><a href="#">Reprise d'anciens livres</a></li>
+                        <li><a href="#">Demande de facture</a></li>
+                        <li><a href="#">Services</a></li>
+                        <li><a href="#">Trouver son magasin</a></li>
+                    </ul>
+                </section>
+            </div>
+
+            <div class="col-lg-3 col-md-6">
+                <!-- About Us-->
+                <section class="widget widget-links widget-light-skin">
+                    <h3 class="widget-title">A propos</h3>
+                    <ul>
+                        <li><a href="#">Conditions générales de ventes </a></li>
+                        <li><a href="#">Mentions légales </a></li>
+                        <li><a href="#">Carrières</a></li>
+                        <li><a href="#">L'entreprise</a></li>
+                        <li><a href="#">Notre histoire</a></li>
+                        <li><a href="#">Services</a></li>
+                        <li><a href="#">Blog</a></li>
+                    </ul>
+                </section>
+            </div>
+            <div class="col-lg-3 col-md-6">
+                <!-- Account / Shipping Info-->
+                <section class="widget widget-links widget-light-skin">
+                    <h3 class="widget-title">Compte</h3>
+                    <ul>
+                        <li><a href="#">Votre compte</a></li>
+                        <li><a href="#">Historique des commandes</a></li>
+                        <li><a href="#">Modifier vos coordonnées</a></li>
+                        <li><a href="#">Taxes</a></li>
+                        <li><a href="#">Informations de livraison</a></li>
+                    </ul>
+                </section>
+            </div>
+        </div>
+        <hr class="hr-light">
+        <div class="row">
+            <div class="col-md-7 padding-bottom-1x"></div>
+            <div class="col-md-5 padding-bottom-1x">
+                <div class="margin-top-1x hidden-md-up"></div>
+                <!--Subscription-->
+                <form class="subscribe-form" action="#" method="post" target="_blank" novalidate="">
+                    <div class="clearfix">
+                        <div class="input-group input-light">
+                            <input class="form-control" type="email" name="EMAIL" placeholder="Votre e-mail"><span
+                                class="input-group-addon"><i class="icon-mail"></i></span>
+                        </div>
+                        <button class="btn btn-primary mt-2" type="submit">S'inscrire</button>
+                    </div><span class="form-text text-sm text-white opacity-50">Abonnez-vous à notre newsletter pour
+                        recevoir des offres de remise anticipée, les dernières nouvelles, des informations sur les
+                        ventes et les promotions.</span>
+                </form>
+            </div>
+        </div>
+        <!-- Copyright-->
+        <p class="footer-copyright">&copy; Tous droits réservés. Bookstore</p>
+    </div>
+</footer>
